# libnss_ufp

./: Makefile.am  README  configure.ac  gate_check.c  gate_check.h  libnss_ufp.c  libnss_ufp.h  libnss_ufp_test.c  read_config.c  read_config.h  readme.build  testconfig.c  testpwent.c  testsprintf.c
